--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,7 @@ name: Build and Publish
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+  
 
 jobs:
   build:
@@ -19,14 +17,16 @@ jobs:
       with:
         dotnet-version: 7.0.x
 
-    - name: Restore dependencies
-      run: dotnet restore
-
+    - name: Debug - Mostrar estructura del directorio
+      run: ls -R
+    - name: Dependencias
+      run: dotnet restore ./MiNotSoSimpleApp/MiNotSoSimpleApp.csproj
+      
     - name: Build
       run: dotnet build --configuration Release
 
     - name: Publish
-      run: dotnet publish --configuration Release --output ./publish
+      run: dotnet publish ./MinotSoSimpleApp/MiNotSosimpleApp.csproj --configuration Release --output ./publish
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
